# gsml

./: .env.example  .gitignore  README.md  docker-compose.yml  upstream.yml
.claude/skills/commit/: SKILL.md
.claude/skills/plan-deep-dive/: SKILL.md
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: concurrency.py  config.py  db.py  deps.py  errors.py  main.py  models.py  scheduler.py  schemas.py  security.py  slot_manager.py  timezone_util.py
apps/api/app/routers/: auth.py  keys.py  me.py  openai_proxy.py  usage.py  web_chat.py
apps/api/app/upstream/: __init__.py  balancer.py  client.py  instance_node.py  llama_native.py  token_count.py
apps/web/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
apps/web/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
apps/web/src/api/: chat.ts  client.ts
apps/web/src/components/: ChatInput.tsx  ChatWindow.tsx  KeyCard.tsx  MessageBubble.tsx  ModelSelector.tsx  SessionList.tsx  UsageCard.tsx
apps/web/src/lib/: auth.ts
apps/web/src/pages/: Callback.tsx  Chat.tsx  Dashboard.tsx  Login.tsx
